Adición de transición rectangular

--- a/config.cfg
+++ b/config.cfg
@@ -1,12 +1,13 @@
 [Lenguaje]
 
-lengua_activa="en"
+lengua_activa="es"
 
 [Personaje]
 
 speed=100
 maxhealth=100
 basedamage=100
-nutrescan=20
+taco=10
 pedigree=30
+nutrescan=20
 playername=""
