Actualización sistema de guardado
- Se añadió todo lo necesario para guardar partida.
- En teoría ya funciona el botón de continuar.
- Se actualizaron las escenas Global y Config.

- Se reorganizó la carpeta singletone

--- a/config.cfg
+++ b/config.cfg
@@ -5,9 +5,27 @@ lengua_activa="es"
 [Personaje]
 
 speed=100
-maxhealth=100
+maxhealth=500
+curhealth=100
+tophealth=100
 basedamage=100
 taco=10
 pedigree=30
 nutrescan=20
 playername=""
+
+[EnemigoT]
+
+velocidad=50.0
+damage=20.0
+
+[Audio]
+
+mscvol=0.7
+sfxvol=0.7
+voivol=0.7
+mstvol=1.0
+
+[Touch]
+
+touch_controls=false
